# thg

./: .gitignore  CMakeLists.txt  HANDOVER.md  PlotTwist.def  README.md  TyrianHomeAndGarden.def
include/: HoardAndSeekAPI.h
lib/alter-ego-build/: README.md  package.json
lib/alter-ego-build/src/: index.js
lib/alter-ego-build/test/: roundtrip.js
src/: DecorationData.cpp  DecorationData.h  DecorationList.cpp  DecorationList.h  HandiworkHook.cpp  HandiworkHook.h  HttpClient.cpp  HttpClient.h  IconCache.cpp  IconCache.h  MetadataScraper.cpp  MetadataScraper.h  RecipeData.cpp  RecipeData.h  WikiPreview.cpp  WikiPreview.h  dllmain.cpp  icon_data.h
tests/: test_chatlink.cpp  test_list.cpp
